// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Backend HTTP error responses HTTP 400 (Bad Request) error is rendered correctly 1`] = `
<DocumentFragment>
  <main>
    <div
      class="container"
      style="margin-bottom: 26px;"
    >
      <div
        class="row row-cols-md-12"
      >
        <div
          class="col-md-8"
        >
          <div
            class="jumbotron"
          >
            <div
              class="container text-left"
            >
              <h1>
                GetIt Search Results:
              </h1>
              <div>
                <div
                  class="citation-container"
                >
                  <p>
                    1999
                  </p>
                  <div
                    class="citation-info"
                  >
                    <p>
                      <span
                        class="citation-info-label"
                      >
                        ISBN:
                      </span>
                       1111111111111
                    </p>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="mt-3 mb-3"
          >
             
            <style>
              
                .link-icon::before {
                    content: "\\e157";
                    font-family: "Material Symbols Sharp";
                    color: #fff;
                    margin-right: 5px;
                    vertical-align: middle;
                }
            
            </style>
            <div>
              <button
                style="border-radius: 3px; background-color: rgb(87, 6, 140); color: rgb(255, 255, 255); cursor: pointer; border: 1px solid #ccc; padding: 5px 10px; margin-right: 5px;"
              >
                <span
                  class="link-icon"
                />
                Create a stable link to this page
              </button>
            </div>
          </div>
          <div
            role="alert"
          >
            <div>
              The backend API returned an HTTP error response: 400 (Bad Request)
            </div>
          </div>
          <div>
            <p>
              No results found
            </p>
          </div>
        </div>
        <div
          class="col-md-4"
        >
          <aside
            title="ask-librarian"
          >
            <div
              class="ask-librarian"
            >
              <h2>
                Need Help?
              </h2>
              <h3>
                <a
                  href="https://library.nyu.edu/ask/"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  Ask a Librarian
                </a>
              </h3>
              <div>
                <p>
                  Use 
                  <a
                    href="https://library.nyu.edu/ask/"
                    rel="noreferrer"
                    target="_blank"
                  >
                    Ask A Librarian
                  </a>
                   or the "Chat with Us" icon at the bottom right corner for any question you have about the Libraries' services.
                </p>
                <p>
                  Visit our 
                  <a
                    href="https://guides.nyu.edu/online-tutorials/finding-sources"
                    rel="noreferrer"
                    target="_blank"
                  >
                    online tutorials
                  </a>
                   for tips on searching the catalog and getting library resources.
                </p>
                <h3>
                  Additional Resources
                </h3>
                <ul>
                  <li>
                    Use 
                    <a
                      href="https://ezborrow.reshare.indexdata.com/"
                      rel="noreferrer"
                      target="_blank"
                    >
                      EZBorrow
                    </a>
                     or 
                    <a
                      href="https://library.nyu.edu/services/borrowing/from-non-nyu-libraries/interlibrary-loan/"
                      rel="noreferrer"
                      target="_blank"
                    >
                      InterLibrary Loan (ILL)
                    </a>
                     for materials unavailable at NYU
                  </li>
                  <li>
                    Discover subject specific resources using 
                    <a
                      href="http://guides.nyu.edu"
                      rel="noreferrer"
                      target="_blank"
                    >
                      expert curated research guides
                    </a>
                  </li>
                  <li>
                    Explore the 
                    <a
                      href="https://library.nyu.edu/services/"
                      rel="noreferrer"
                      target="_blank"
                    >
                      complete list of library services
                    </a>
                  </li>
                  <li>
                    Reach out to the Libraries on 
                    <a
                      href="https://www.instagram.com/nyulibraries/"
                      rel="noreferrer"
                      target="_blank"
                    >
                      our Instagram
                    </a>
                  </li>
                  <li>
                    Search 
                    <a
                      href="https://www.worldcat.org/search?qt=worldcat_org_all"
                      rel="noreferrer"
                      target="_blank"
                    >
                      WorldCat
                    </a>
                     for items in nearby libraries
                  </li>
                </ul>
              </div>
            </div>
          </aside>
        </div>
      </div>
    </div>
  </main>
</DocumentFragment>
`;

exports[`Backend HTTP error responses HTTP 403 (Forbidden) error is rendered correctly 1`] = `
<DocumentFragment>
  <main>
    <div
      class="container"
      style="margin-bottom: 26px;"
    >
      <div
        class="row row-cols-md-12"
      >
        <div
          class="col-md-8"
        >
          <div
            class="jumbotron"
          >
            <div
              class="container text-left"
            >
              <h1>
                GetIt Search Results:
              </h1>
              <div>
                <div
                  class="citation-container"
                >
                  <p>
                    1999
                  </p>
                  <div
                    class="citation-info"
                  >
                    <p>
                      <span
                        class="citation-info-label"
                      >
                        ISBN:
                      </span>
                       1111111111111
                    </p>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="mt-3 mb-3"
          >
             
            <style>
              
                .link-icon::before {
                    content: "\\e157";
                    font-family: "Material Symbols Sharp";
                    color: #fff;
                    margin-right: 5px;
                    vertical-align: middle;
                }
            
            </style>
            <div>
              <button
                style="border-radius: 3px; background-color: rgb(87, 6, 140); color: rgb(255, 255, 255); cursor: pointer; border: 1px solid #ccc; padding: 5px 10px; margin-right: 5px;"
              >
                <span
                  class="link-icon"
                />
                Create a stable link to this page
              </button>
            </div>
          </div>
          <div
            role="alert"
          >
            <div>
              The backend API returned an HTTP error response: 403 (Forbidden)
            </div>
          </div>
          <div>
            <p>
              No results found
            </p>
          </div>
        </div>
        <div
          class="col-md-4"
        >
          <aside
            title="ask-librarian"
          >
            <div
              class="ask-librarian"
            >
              <h2>
                Need Help?
              </h2>
              <h3>
                <a
                  href="https://library.nyu.edu/ask/"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  Ask a Librarian
                </a>
              </h3>
              <div>
                <p>
                  Use 
                  <a
                    href="https://library.nyu.edu/ask/"
                    rel="noreferrer"
                    target="_blank"
                  >
                    Ask A Librarian
                  </a>
                   or the "Chat with Us" icon at the bottom right corner for any question you have about the Libraries' services.
                </p>
                <p>
                  Visit our 
                  <a
                    href="https://guides.nyu.edu/online-tutorials/finding-sources"
                    rel="noreferrer"
                    target="_blank"
                  >
                    online tutorials
                  </a>
                   for tips on searching the catalog and getting library resources.
                </p>
                <h3>
                  Additional Resources
                </h3>
                <ul>
                  <li>
                    Use 
                    <a
                      href="https://ezborrow.reshare.indexdata.com/"
                      rel="noreferrer"
                      target="_blank"
                    >
                      EZBorrow
                    </a>
                     or 
                    <a
                      href="https://library.nyu.edu/services/borrowing/from-non-nyu-libraries/interlibrary-loan/"
                      rel="noreferrer"
                      target="_blank"
                    >
                      InterLibrary Loan (ILL)
                    </a>
                     for materials unavailable at NYU
                  </li>
                  <li>
                    Discover subject specific resources using 
                    <a
                      href="http://guides.nyu.edu"
                      rel="noreferrer"
                      target="_blank"
                    >
                      expert curated research guides
                    </a>
                  </li>
                  <li>
                    Explore the 
                    <a
                      href="https://library.nyu.edu/services/"
                      rel="noreferrer"
                      target="_blank"
                    >
                      complete list of library services
                    </a>
                  </li>
                  <li>
                    Reach out to the Libraries on 
                    <a
                      href="https://www.instagram.com/nyulibraries/"
                      rel="noreferrer"
                      target="_blank"
                    >
                      our Instagram
                    </a>
                  </li>
                  <li>
                    Search 
                    <a
                      href="https://www.worldcat.org/search?qt=worldcat_org_all"
                      rel="noreferrer"
                      target="_blank"
                    >
                      WorldCat
                    </a>
                     for items in nearby libraries
                  </li>
                </ul>
              </div>
            </div>
          </aside>
        </div>
      </div>
    </div>
  </main>
</DocumentFragment>
`;

exports[`Backend HTTP error responses HTTP 408 (Request Timeout) error is rendered correctly 1`] = `
<DocumentFragment>
  <main>
    <div
      class="container"
      style="margin-bottom: 26px;"
    >
      <div
        class="row row-cols-md-12"
      >
        <div
          class="col-md-8"
        >
          <div
            class="jumbotron"
          >
            <div
              class="container text-left"
            >
              <h1>
                GetIt Search Results:
              </h1>
              <div>
                <div
                  class="citation-container"
                >
                  <p>
                    1999
                  </p>
                  <div
                    class="citation-info"
                  >
                    <p>
                      <span
                        class="citation-info-label"
                      >
                        ISBN:
                      </span>
                       1111111111111
                    </p>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="mt-3 mb-3"
          >
             
            <style>
              
                .link-icon::before {
                    content: "\\e157";
                    font-family: "Material Symbols Sharp";
                    color: #fff;
                    margin-right: 5px;
                    vertical-align: middle;
                }
            
            </style>
            <div>
              <button
                style="border-radius: 3px; background-color: rgb(87, 6, 140); color: rgb(255, 255, 255); cursor: pointer; border: 1px solid #ccc; padding: 5px 10px; margin-right: 5px;"
              >
                <span
                  class="link-icon"
                />
                Create a stable link to this page
              </button>
            </div>
          </div>
          <div
            role="alert"
          >
            <div>
              The backend API returned an HTTP error response: 408 (Request Timeout)
            </div>
          </div>
          <div>
            <p>
              No results found
            </p>
          </div>
        </div>
        <div
          class="col-md-4"
        >
          <aside
            title="ask-librarian"
          >
            <div
              class="ask-librarian"
            >
              <h2>
                Need Help?
              </h2>
              <h3>
                <a
                  href="https://library.nyu.edu/ask/"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  Ask a Librarian
                </a>
              </h3>
              <div>
                <p>
                  Use 
                  <a
                    href="https://library.nyu.edu/ask/"
                    rel="noreferrer"
                    target="_blank"
                  >
                    Ask A Librarian
                  </a>
                   or the "Chat with Us" icon at the bottom right corner for any question you have about the Libraries' services.
                </p>
                <p>
                  Visit our 
                  <a
                    href="https://guides.nyu.edu/online-tutorials/finding-sources"
                    rel="noreferrer"
                    target="_blank"
                  >
                    online tutorials
                  </a>
                   for tips on searching the catalog and getting library resources.
                </p>
                <h3>
                  Additional Resources
                </h3>
                <ul>
                  <li>
                    Use 
                    <a
                      href="https://ezborrow.reshare.indexdata.com/"
                      rel="noreferrer"
                      target="_blank"
                    >
                      EZBorrow
                    </a>
                     or 
                    <a
                      href="https://library.nyu.edu/services/borrowing/from-non-nyu-libraries/interlibrary-loan/"
                      rel="noreferrer"
                      target="_blank"
                    >
                      InterLibrary Loan (ILL)
                    </a>
                     for materials unavailable at NYU
                  </li>
                  <li>
                    Discover subject specific resources using 
                    <a
                      href="http://guides.nyu.edu"
                      rel="noreferrer"
                      target="_blank"
                    >
                      expert curated research guides
                    </a>
                  </li>
                  <li>
                    Explore the 
                    <a
                      href="https://library.nyu.edu/services/"
                      rel="noreferrer"
                      target="_blank"
                    >
                      complete list of library services
                    </a>
                  </li>
                  <li>
                    Reach out to the Libraries on 
                    <a
                      href="https://www.instagram.com/nyulibraries/"
                      rel="noreferrer"
                      target="_blank"
                    >
                      our Instagram
                    </a>
                  </li>
                  <li>
                    Search 
                    <a
                      href="https://www.worldcat.org/search?qt=worldcat_org_all"
                      rel="noreferrer"
                      target="_blank"
                    >
                      WorldCat
                    </a>
                     for items in nearby libraries
                  </li>
                </ul>
              </div>
            </div>
          </aside>
        </div>
      </div>
    </div>
  </main>
</DocumentFragment>
`;

exports[`Backend HTTP error responses HTTP 500 (Internal Server Error) error is rendered correctly 1`] = `
<DocumentFragment>
  <main>
    <div
      class="container"
      style="margin-bottom: 26px;"
    >
      <div
        class="row row-cols-md-12"
      >
        <div
          class="col-md-8"
        >
          <div
            class="jumbotron"
          >
            <div
              class="container text-left"
            >
              <h1>
                GetIt Search Results:
              </h1>
              <div>
                <div
                  class="citation-container"
                >
                  <p>
                    1999
                  </p>
                  <div
                    class="citation-info"
                  >
                    <p>
                      <span
                        class="citation-info-label"
                      >
                        ISBN:
                      </span>
                       1111111111111
                    </p>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="mt-3 mb-3"
          >
             
            <style>
              
                .link-icon::before {
                    content: "\\e157";
                    font-family: "Material Symbols Sharp";
                    color: #fff;
                    margin-right: 5px;
                    vertical-align: middle;
                }
            
            </style>
            <div>
              <button
                style="border-radius: 3px; background-color: rgb(87, 6, 140); color: rgb(255, 255, 255); cursor: pointer; border: 1px solid #ccc; padding: 5px 10px; margin-right: 5px;"
              >
                <span
                  class="link-icon"
                />
                Create a stable link to this page
              </button>
            </div>
          </div>
          <div
            role="alert"
          >
            <div>
              The backend API returned an HTTP error response: 500 (Internal Server Error)
            </div>
          </div>
          <div>
            <p>
              No results found
            </p>
          </div>
        </div>
        <div
          class="col-md-4"
        >
          <aside
            title="ask-librarian"
          >
            <div
              class="ask-librarian"
            >
              <h2>
                Need Help?
              </h2>
              <h3>
                <a
                  href="https://library.nyu.edu/ask/"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  Ask a Librarian
                </a>
              </h3>
              <div>
                <p>
                  Use 
                  <a
                    href="https://library.nyu.edu/ask/"
                    rel="noreferrer"
                    target="_blank"
                  >
                    Ask A Librarian
                  </a>
                   or the "Chat with Us" icon at the bottom right corner for any question you have about the Libraries' services.
                </p>
                <p>
                  Visit our 
                  <a
                    href="https://guides.nyu.edu/online-tutorials/finding-sources"
                    rel="noreferrer"
                    target="_blank"
                  >
                    online tutorials
                  </a>
                   for tips on searching the catalog and getting library resources.
                </p>
                <h3>
                  Additional Resources
                </h3>
                <ul>
                  <li>
                    Use 
                    <a
                      href="https://ezborrow.reshare.indexdata.com/"
                      rel="noreferrer"
                      target="_blank"
                    >
                      EZBorrow
                    </a>
                     or 
                    <a
                      href="https://library.nyu.edu/services/borrowing/from-non-nyu-libraries/interlibrary-loan/"
                      rel="noreferrer"
                      target="_blank"
                    >
                      InterLibrary Loan (ILL)
                    </a>
                     for materials unavailable at NYU
                  </li>
                  <li>
                    Discover subject specific resources using 
                    <a
                      href="http://guides.nyu.edu"
                      rel="noreferrer"
                      target="_blank"
                    >
                      expert curated research guides
                    </a>
                  </li>
                  <li>
                    Explore the 
                    <a
                      href="https://library.nyu.edu/services/"
                      rel="noreferrer"
                      target="_blank"
                    >
                      complete list of library services
                    </a>
                  </li>
                  <li>
                    Reach out to the Libraries on 
                    <a
                      href="https://www.instagram.com/nyulibraries/"
                      rel="noreferrer"
                      target="_blank"
                    >
                      our Instagram
                    </a>
                  </li>
                  <li>
                    Search 
                    <a
                      href="https://www.worldcat.org/search?qt=worldcat_org_all"
                      rel="noreferrer"
                      target="_blank"
                    >
                      WorldCat
                    </a>
                     for items in nearby libraries
                  </li>
                </ul>
              </div>
            </div>
          </aside>
        </div>
      </div>
    </div>
  </main>
</DocumentFragment>
`;

exports[`Backend fetch exceptions TypeError: Failed to fetch renders backend fetch errors correctly 1`] = `
<DocumentFragment>
  <main>
    <div
      class="container"
      style="margin-bottom: 26px;"
    >
      <div
        class="row row-cols-md-12"
      >
        <div
          class="col-md-8"
        >
          <div
            class="jumbotron"
          >
            <div
              class="container text-left"
            >
              <h1>
                GetIt Search Results:
              </h1>
              <div>
                <div
                  class="citation-container"
                >
                  <p>
                    1999
                  </p>
                  <div
                    class="citation-info"
                  >
                    <p>
                      <span
                        class="citation-info-label"
                      >
                        ISBN:
                      </span>
                       1111111111111
                    </p>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="mt-3 mb-3"
          >
             
            <style>
              
                .link-icon::before {
                    content: "\\e157";
                    font-family: "Material Symbols Sharp";
                    color: #fff;
                    margin-right: 5px;
                    vertical-align: middle;
                }
            
            </style>
            <div>
              <button
                style="border-radius: 3px; background-color: rgb(87, 6, 140); color: rgb(255, 255, 255); cursor: pointer; border: 1px solid #ccc; padding: 5px 10px; margin-right: 5px;"
              >
                <span
                  class="link-icon"
                />
                Create a stable link to this page
              </button>
            </div>
          </div>
          <div
            role="alert"
          >
            <div>
              Error fetching data from the Ariadne API: TypeError: Failed to fetch
            </div>
          </div>
          <div>
            <p>
              No results found
            </p>
          </div>
        </div>
        <div
          class="col-md-4"
        >
          <aside
            title="ask-librarian"
          >
            <div
              class="ask-librarian"
            >
              <h2>
                Need Help?
              </h2>
              <h3>
                <a
                  href="https://library.nyu.edu/ask/"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  Ask a Librarian
                </a>
              </h3>
              <div>
                <p>
                  Use 
                  <a
                    href="https://library.nyu.edu/ask/"
                    rel="noreferrer"
                    target="_blank"
                  >
                    Ask A Librarian
                  </a>
                   or the "Chat with Us" icon at the bottom right corner for any question you have about the Libraries' services.
                </p>
                <p>
                  Visit our 
                  <a
                    href="https://guides.nyu.edu/online-tutorials/finding-sources"
                    rel="noreferrer"
                    target="_blank"
                  >
                    online tutorials
                  </a>
                   for tips on searching the catalog and getting library resources.
                </p>
                <h3>
                  Additional Resources
                </h3>
                <ul>
                  <li>
                    Use 
                    <a
                      href="https://ezborrow.reshare.indexdata.com/"
                      rel="noreferrer"
                      target="_blank"
                    >
                      EZBorrow
                    </a>
                     or 
                    <a
                      href="https://library.nyu.edu/services/borrowing/from-non-nyu-libraries/interlibrary-loan/"
                      rel="noreferrer"
                      target="_blank"
                    >
                      InterLibrary Loan (ILL)
                    </a>
                     for materials unavailable at NYU
                  </li>
                  <li>
                    Discover subject specific resources using 
                    <a
                      href="http://guides.nyu.edu"
                      rel="noreferrer"
                      target="_blank"
                    >
                      expert curated research guides
                    </a>
                  </li>
                  <li>
                    Explore the 
                    <a
                      href="https://library.nyu.edu/services/"
                      rel="noreferrer"
                      target="_blank"
                    >
                      complete list of library services
                    </a>
                  </li>
                  <li>
                    Reach out to the Libraries on 
                    <a
                      href="https://www.instagram.com/nyulibraries/"
                      rel="noreferrer"
                      target="_blank"
                    >
                      our Instagram
                    </a>
                  </li>
                  <li>
                    Search 
                    <a
                      href="https://www.worldcat.org/search?qt=worldcat_org_all"
                      rel="noreferrer"
                      target="_blank"
                    >
                      WorldCat
                    </a>
                     for items in nearby libraries
                  </li>
                </ul>
              </div>
            </div>
          </aside>
        </div>
      </div>
    </div>
  </main>
</DocumentFragment>
`;

exports[`Backend response includes errors Response includes 2 errors and an empty SFX response renders errors included in backend response correctly 1`] = `
<DocumentFragment>
  <main>
    <div
      class="container"
      style="margin-bottom: 26px;"
    >
      <div
        class="row row-cols-md-12"
      >
        <div
          class="col-md-8"
        >
          <div
            class="jumbotron"
          >
            <div
              class="container text-left"
            >
              <h1>
                GetIt Search Results:
              </h1>
              <div>
                <div
                  class="citation-container"
                >
                  <p>
                    1999
                  </p>
                  <div
                    class="citation-info"
                  >
                    <p>
                      <span
                        class="citation-info-label"
                      >
                        ISBN:
                      </span>
                       1111111111111
                    </p>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="mt-3 mb-3"
          >
             
            <style>
              
                .link-icon::before {
                    content: "\\e157";
                    font-family: "Material Symbols Sharp";
                    color: #fff;
                    margin-right: 5px;
                    vertical-align: middle;
                }
            
            </style>
            <div>
              <button
                style="border-radius: 3px; background-color: rgb(87, 6, 140); color: rgb(255, 255, 255); cursor: pointer; border: 1px solid #ccc; padding: 5px 10px; margin-right: 5px;"
              >
                <span
                  class="link-icon"
                />
                Create a stable link to this page
              </button>
            </div>
          </div>
          <div
            role="alert"
          >
            <div>
              The backend API returned errors: "[ERROR 1]", "[ERROR 2]"
            </div>
          </div>
          <div>
            <p>
              No results found
            </p>
          </div>
        </div>
        <div
          class="col-md-4"
        >
          <aside
            title="ask-librarian"
          >
            <div
              class="ask-librarian"
            >
              <h2>
                Need Help?
              </h2>
              <h3>
                <a
                  href="https://library.nyu.edu/ask/"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  Ask a Librarian
                </a>
              </h3>
              <div>
                <p>
                  Use 
                  <a
                    href="https://library.nyu.edu/ask/"
                    rel="noreferrer"
                    target="_blank"
                  >
                    Ask A Librarian
                  </a>
                   or the "Chat with Us" icon at the bottom right corner for any question you have about the Libraries' services.
                </p>
                <p>
                  Visit our 
                  <a
                    href="https://guides.nyu.edu/online-tutorials/finding-sources"
                    rel="noreferrer"
                    target="_blank"
                  >
                    online tutorials
                  </a>
                   for tips on searching the catalog and getting library resources.
                </p>
                <h3>
                  Additional Resources
                </h3>
                <ul>
                  <li>
                    Use 
                    <a
                      href="https://ezborrow.reshare.indexdata.com/"
                      rel="noreferrer"
                      target="_blank"
                    >
                      EZBorrow
                    </a>
                     or 
                    <a
                      href="https://library.nyu.edu/services/borrowing/from-non-nyu-libraries/interlibrary-loan/"
                      rel="noreferrer"
                      target="_blank"
                    >
                      InterLibrary Loan (ILL)
                    </a>
                     for materials unavailable at NYU
                  </li>
                  <li>
                    Discover subject specific resources using 
                    <a
                      href="http://guides.nyu.edu"
                      rel="noreferrer"
                      target="_blank"
                    >
                      expert curated research guides
                    </a>
                  </li>
                  <li>
                    Explore the 
                    <a
                      href="https://library.nyu.edu/services/"
                      rel="noreferrer"
                      target="_blank"
                    >
                      complete list of library services
                    </a>
                  </li>
                  <li>
                    Reach out to the Libraries on 
                    <a
                      href="https://www.instagram.com/nyulibraries/"
                      rel="noreferrer"
                      target="_blank"
                    >
                      our Instagram
                    </a>
                  </li>
                  <li>
                    Search 
                    <a
                      href="https://www.worldcat.org/search?qt=worldcat_org_all"
                      rel="noreferrer"
                      target="_blank"
                    >
                      WorldCat
                    </a>
                     for items in nearby libraries
                  </li>
                </ul>
              </div>
            </div>
          </aside>
        </div>
      </div>
    </div>
  </main>
</DocumentFragment>
`;

exports[`Backend success Contrived FRBR Group Test Case renders correctly 1`] = `
<DocumentFragment>
  <main>
    <div
      class="container"
      style="margin-bottom: 26px;"
    >
      <div
        class="row row-cols-md-12"
      >
        <div
          class="col-md-8"
        >
          <div
            class="jumbotron"
          >
            <div
              class="container text-left"
            >
              <h1>
                GetIt Search Results:
              </h1>
              <div>
                <div
                  class="citation-container"
                >
                  <p>
                    1999
                  </p>
                  <div
                    class="citation-info"
                  >
                    <p>
                      <span
                        class="citation-info-label"
                      >
                        ISBN:
                      </span>
                       1111111111111
                    </p>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="mt-3 mb-3"
          >
             
            <style>
              
                .link-icon::before {
                    content: "\\e157";
                    font-family: "Material Symbols Sharp";
                    color: #fff;
                    margin-right: 5px;
                    vertical-align: middle;
                }
            
            </style>
            <div>
              <button
                style="border-radius: 3px; background-color: rgb(87, 6, 140); color: rgb(255, 255, 255); cursor: pointer; border: 1px solid #ccc; padding: 5px 10px; margin-right: 5px;"
              >
                <span
                  class="link-icon"
                />
                Create a stable link to this page
              </button>
            </div>
          </div>
          <div
            class="list-group"
            style=""
          >
            <div
              class="list-group-item list-group-item-action flex-column border-0"
            />
            <div
              class="list-group-item list-group-item-action flex-column border-0"
            >
              <div
                class="row"
              >
                <h3>
                  <a
                    href="https://fake-frbr-member-search.com/1/"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    FRBR member search results doc 1, link 1
                  </a>
                </h3>
                <p />
              </div>
            </div>
            <div
              class="list-group-item list-group-item-action flex-column border-0"
            >
              <div
                class="row"
              >
                <h3>
                  <a
                    href="https://fake-frbr-member-search.com/3/"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    FRBR member search results doc 1, link 3
                  </a>
                </h3>
                <p />
              </div>
            </div>
            <div
              class="list-group-item list-group-item-action flex-column border-0"
            >
              <div
                class="row"
              >
                <h3>
                  <a
                    href="https://fake-isbn-search.com/2/"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    ISBN search results doc 2, link 2
                  </a>
                </h3>
                <p />
              </div>
            </div>
            <div
              class="list-group-item list-group-item-action flex-column border-0"
            >
              <div
                class="row"
              >
                <h3>
                  <a
                    href="https://fake-isbn-search.com/4/"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    ISBN search results doc 2, link 4
                  </a>
                </h3>
                <p />
              </div>
            </div>
          </div>
        </div>
        <div
          class="col-md-4"
        >
          <aside
            title="ask-librarian"
          >
            <div
              class="ask-librarian"
            >
              <h2>
                Need Help?
              </h2>
              <h3>
                <a
                  href="https://library.nyu.edu/ask/"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  Ask a Librarian
                </a>
              </h3>
              <div>
                <p>
                  Use 
                  <a
                    href="https://library.nyu.edu/ask/"
                    rel="noreferrer"
                    target="_blank"
                  >
                    Ask A Librarian
                  </a>
                   or the "Chat with Us" icon at the bottom right corner for any question you have about the Libraries' services.
                </p>
                <p>
                  Visit our 
                  <a
                    href="https://guides.nyu.edu/online-tutorials/finding-sources"
                    rel="noreferrer"
                    target="_blank"
                  >
                    online tutorials
                  </a>
                   for tips on searching the catalog and getting library resources.
                </p>
                <h3>
                  Additional Resources
                </h3>
                <ul>
                  <li>
                    Use 
                    <a
                      href="https://ezborrow.reshare.indexdata.com/"
                      rel="noreferrer"
                      target="_blank"
                    >
                      EZBorrow
                    </a>
                     or 
                    <a
                      href="https://library.nyu.edu/services/borrowing/from-non-nyu-libraries/interlibrary-loan/"
                      rel="noreferrer"
                      target="_blank"
                    >
                      InterLibrary Loan (ILL)
                    </a>
                     for materials unavailable at NYU
                  </li>
                  <li>
                    Discover subject specific resources using 
                    <a
                      href="http://guides.nyu.edu"
                      rel="noreferrer"
                      target="_blank"
                    >
                      expert curated research guides
                    </a>
                  </li>
                  <li>
                    Explore the 
                    <a
                      href="https://library.nyu.edu/services/"
                      rel="noreferrer"
                      target="_blank"
                    >
                      complete list of library services
                    </a>
                  </li>
                  <li>
                    Reach out to the Libraries on 
                    <a
                      href="https://www.instagram.com/nyulibraries/"
                      rel="noreferrer"
                      target="_blank"
                    >
                      our Instagram
                    </a>
                  </li>
                  <li>
                    Search 
                    <a
                      href="https://www.worldcat.org/search?qt=worldcat_org_all"
                      rel="noreferrer"
                      target="_blank"
                    >
                      WorldCat
                    </a>
                     for items in nearby libraries
                  </li>
                </ul>
              </div>
            </div>
          </aside>
        </div>
      </div>
    </div>
  </main>
</DocumentFragment>
`;
